Trying to fix the graphical overlap bug

--- a/IncrementalTableElements/styles/main.css
+++ b/IncrementalTableElements/styles/main.css
@@ -13,7 +13,7 @@ body{
 
 .affix {
 	top:0;
-	width:20%;
+	position:relative;
 }
 
 .element-table tr:first-child td {
